--- a/src/index.html
+++ b/src/index.html
@@ -49,139 +49,139 @@
 							</div>
 						</div>
 						<div class="catalog-list">
-							<div class="catalog-list__item big-first catalog-card">
+							<a href="" class="catalog-list__item big-first catalog-card">
 								<div class="catalog-card__image big">
 									<img  src="./img/userfiles/catalog-01.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Пробивные станки</a>
+										<h5>Пробивные станки</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>Euromac</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item catalog-card">
+							</ф>
+							<a href="" class="catalog-list__item catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-02.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Станки для удаления грата, заусенцев, шлифования и полировки металла</a>
+										<h5>Станки для удаления грата, заусенцев, шлифования и полировки металла</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>COSTA LEVIGATRICI</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item catalog-card black">
+							</a>
+							<a href="" class="catalog-list__item catalog-card black">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-03.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Инструмент для гибочных прессов</a>
+										<h5>Инструмент для гибочных прессов</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>ITALIAN MACHINERY ASSOCIATION</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item red catalog-card">
+							</a>
+							<a href="" class="catalog-list__item red catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-04.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Автоматизированные гибочные станки для проволоки и труб</a>
+										<h5>Автоматизированные гибочные станки для проволоки и труб</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>OMCG</p>
 										<p>Euromac</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item catalog-card">
+							</a>
+							<a href="" class="catalog-list__item catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-05.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Оборудование со склада</a>
+										<h5>Оборудование со склада</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>COSTA LEVIGATRICI</p>
 										<p>Euromac</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item red catalog-card">
+							</a>
+							<a href="" class="catalog-list__item red catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-06.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Гибочные прессы</a>
+										<h5>Гибочные прессы</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>Vimercati</p>
 										<p>Euromac</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item black catalog-card">
+							</a>
+							<a href="" class="catalog-list__item black catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-07.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Универсальные станки</a>
+										<h5>Универсальные станки</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>Euromac</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item black catalog-card">
+							</a>
+							<a href="" class="catalog-list__item black catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-08.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Гильотинные ножницы</a>
+										<h5>Гильотинные ножницы</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>Vimercati</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item catalog-card">
+							</a>
+							<a href="" class="catalog-list__item catalog-card">
 								<div class="catalog-card__image">
 									<img  src="./img/userfiles/catalog-09.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Фильтры для очистки воздуха</a>
+										<h5>Фильтры для очистки воздуха</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>HFILTRATION</p>
 									</div>
 								</div>
-							</div>
-							<div class="catalog-list__item red big-last catalog-card">
+							</a>
+							<a href="" class="catalog-list__item red big-last catalog-card">
 								<div class="catalog-card__image big">
 									<img  src="./img/userfiles/catalog-10.jpg" alt="">
 								</div>
 								<div class="catalog-card__info">
 									<div class="catalog-card__title">
-										<a href="#!">Оборудование для рабочей зоны и склада</a>
+										<h5>Оборудование для рабочей зоны и склада</h5>
 									</div>
 									<div class="catalog-card__text">
 										<p>LISTA</p>
 									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 						<div class="catalog-social">
 							<div class="catalog-social__link hover-scale">
@@ -232,6 +232,7 @@
 							</div>
 							<div class="about-body__slider about-slider">
 								<div class="about-slider__list">
+									<!-- Если нужна ссылка див с классом  about-slider__card поменять на тег а -->
 									<div class="about-slider__card">
 										<div class="about-slider__picture">
 											<img src="./img/userfiles/about-slider-01.jpg" alt="">
@@ -386,10 +387,10 @@
 						<div class="main-news__head">
 							<div class="main-news__head-left">
 								<div class="main-news__title">
-									<h3>Новости</h3>
+									<a href="./news.html">Новости</a>
 								</div>
 								<div class="main-news__title red">
-									<h3>Публикации</h3>
+									<a href="./publications.html">Публикации</a>
 								</div>
 							</div>
 							<div class="main-news__button link-hover">
@@ -402,7 +403,7 @@
 									<p>17.03.2022</p>
 								</div>
 								<div class="main-news__card-title">
-									<h5>Первый Accurl лазер в странах Балтии</h5>
+									<a href="#!">Первый Accurl лазер в странах Балтии</a>
 								</div>
 								<div class="main-news__card-text">
 									<p>Мы рады сообщить, что первый станок лазерной резки ACURL в странах Балтии был установлен и запущен Italian Machinery Association у клиента в Каунасе, Литва.</p>
@@ -413,7 +414,7 @@
 									<p>17.03.2022</p>
 								</div>
 								<div class="main-news__card-title">
-									<h5>Euromac MTX FLEX 6 Hybrid в Нур-Султане, Казахстан</h5>
+									<a href="#!">Euromac MTX FLEX 6 Hybrid в Нур-Султане, Казахстан</a>
 								</div>
 								<div class="main-news__card-text">
 									<p>Нами был проверен, настроен и заново запущен для клиента в городе Нур-Султан (Казахстан) координатно-пробивной пресс Euromac MTX Flex 6 Hybrid.</p>
@@ -424,7 +425,7 @@
 									<p>17.03.2022</p>
 								</div>
 								<div class="main-news__card-title">
-									<h5>Первый Accurl лазер в странах Балтии</h5>
+									<a href="#!">Первый Accurl лазер в странах Балтии</a>
 								</div>
 								<div class="main-news__card-text">
 									<p>Мы рады сообщить, что первый станок лазерной резки ACURL в странах Балтии был установлен и запущен Italian Machinery Association у клиента в Каунасе, Литва.</p>
